[package]
name = "datalite"
version = "0.1.0"
description = "Datalog made easy"
authors = ["Ferran Basora <fcsonline@gmail.com>"]
license = "MIT"
edition = "2018"

[lib]
name = "datalite"
path = "src/lib.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
