[package]
name = "datalite"
version = "0.1.0"
description = "Datalog made easy"
authors = ["Ferran Basora <fcsonline@gmail.com>"]
repository = "https://github.com/fcsonline/datalite"
keywords = ["schemaless", "datalog", "datomic", "timetravel", "realtime"]
license = "MIT"

[lib]
name = "datalite"
path = "src/lib.rs"

[features]
default = ["lexer", "parser"]
lexer = ["redfa"]
parser = ["lalr"]

[dependencies]
lalr = { version = "0.0.2", optional = true }
redfa = { version = "0.0.2", optional = true }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1"
plex = "0.2.5"
rusqlite = "0.19.0"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
proc-macro2 = { version = "0.4.3", features = ["nightly"] }
